--- a/src/assets/sidebar.css
+++ b/src/assets/sidebar.css
@@ -1,4 +1,4 @@
-main > aside {
+main > aside, dy-sidebar {
 	flex: 0 12rem;
 	flex-direction: column;
 
@@ -14,7 +14,7 @@ main > aside {
 }
 
 @media (max-width: 36rem) {
-	main > aside {
+	main > aside, dy-sidebar {
 		margin: 0;
 		margin-top: 2em;
 		width: initial;
