Use relative URLs

--- a/src/assets/components/dy-header.html
+++ b/src/assets/components/dy-header.html
@@ -2,7 +2,7 @@
 
 <template id="dy-header">
 	<style>
-	@import 'http://localhost:8888/darrylyeo/wp-content/themes/DY/assets/header.css';
+	@import './wp-content/themes/DY/assets/header.css';
 	</style>
 	<nav id="secondary-menu" class="immersive">
 		<ul>
