--- a/src/assets/components/dy-sidebar.html
+++ b/src/assets/components/dy-sidebar.html
@@ -1,6 +1,6 @@
 <template id="dy-sidebar">
 	<style>
-		@import 'http://localhost:8888/darrylyeo/wp-content/themes/DY/assets/sidebar.css';
+		@import './wp-content/themes/DY/assets/sidebar.css';
 	</style>
 	<aside>
 		<section>
