--- a/src/assets/css.css
+++ b/src/assets/css.css
@@ -224,7 +224,7 @@ main :link:focus, main :visited:focus {
 
 
 :root:not(.load) {
-	background: url(http://localhost:8888/darrylyeo/wp-content/themes/DY/logo/DY-Logo-Animated.svg) center/25vmin no-repeat fixed;
+	background: url(../logo/DY-Logo-Animated.svg) center/25vmin no-repeat fixed;
 }
 #background, #wrapper {
 	transition: 0.25s ease-out;
