--- a/src/assets/components/dy-notification.html
+++ b/src/assets/components/dy-notification.html
@@ -1,10 +1,61 @@
+<template id="dy-notifications">
+	<style>
+		:host {
+			display: flex;
+			flex-direction: column;
+			/*justify-content: flex-end;*/
+			align-items: flex-end;
+			font-size: 0.9em;
+			margin: -3px;
+			overflow-y: auto;
+			position: fixed;
+			text-align: justify;
+			bottom: 0;
+			right: 0;
+			padding: 6px;
+			max-height: min-content;
+			height: 100%;
+			z-index: 1;
+			transition: padding 0.3s;
+		}
+	</style>
+	<slot>
+</template>
+
+<script>
+class DYNotifications extends DYElement {
+	connectedCallback(){
+		this.root
+		window.$DYNotifications = this
+		window.notify = window.alert = this.notify.bind(this)
+	}
+
+	notify(message, dismiss, type){
+		// Check if a notification already has this message.
+		let notification = [...this.$notifications].find(function($this){
+			return $this.html() == message// && $this.childNodes.length === 0
+		})
+		if(notification){
+			notification.remind()
+		}else{
+			notification = new DYNotification()
+				.html(message)
+				.attr('type', type || 'info')
+			notification.dismiss(dismiss)
+		}
+	}
+
+	get $notifications(){
+		return this.find('dy-notification')
+	}
+}
+customElements.define('dy-notifications', DYNotifications)
+</script>
+
+
 <template id="dy-notification">
 	<style>
-		dy-notification, :host {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			
+		:host {
 			background-color: rgba(255,255,255,0.9);
 			border-radius: 7px;
 			border-bottom-right-radius: 4px;
