Don't show icon for now

--- a/src/assets/components/dy-notification.html
+++ b/src/assets/components/dy-notification.html
@@ -143,7 +143,7 @@ customElements.define('dy-notifications', DYNotifications)
 			display: block;
 		}
 	</style>
-	<i id="icon">i</i>
+	<!--<i id="icon">i</i>-->
 	<div>
 		<content></content>
 		<slot></slot>
