--- a/src/assets/components/dy-notification.html
+++ b/src/assets/components/dy-notification.html
@@ -145,8 +145,7 @@ customElements.define('dy-notifications', DYNotifications)
 	</style>
 	<!--<i id="icon">i</i>-->
 	<div>
-		<content></content>
-		<slot></slot>
+		<slot>
 	</div>
 	<button class="small">OK</button>
 </template>
