Use <dy-notifications>

--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -2,6 +2,7 @@
 <link rel="import" href="dy-project-header.html">
 <link rel="import" href="dy-sidebar.html">
 <link rel="import" href="dy-background.html">
+<link rel="import" href="dy-notifications.html">
 
 <template id="dy-page">
 	<style>
@@ -25,7 +26,7 @@
 		</footer>
 	</div>
 	<div id="to-top"></div>
-	<div id="notifications"></div>
+	<dy-notifications></dy-notifications>
 </template>
 
 
