Migrate 1 CSS rule from notifications.css

--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -13,6 +13,10 @@
 		main > *, dy-page > *, ::content, ::slotted {
 			flex: 1;
 		}
+
+		#to-top.show ~ dy-notifications {
+			padding-bottom: 34px;
+		}
 	</style>
 
 	<dy-background></dy-background>
