Rename Element.prototype.find to Element.prototype.findAll, alias Element.prototype.find to Element.prototype.querySelector (also applies to Document and DocumentFragment)

--- a/src/assets/components/dy-background.html
+++ b/src/assets/components/dy-background.html
@@ -36,7 +36,7 @@ class DYBackground extends DYElement {
 	}
 
 	get $canvas(){
-		return this.root.find('canvas')[0]
+		return this.root.find('canvas')
 	}
 }
 customElements.define('dy-background', DYBackground)
