--- a/src/assets/components/dy-icon.html
+++ b/src/assets/components/dy-icon.html
@@ -47,7 +47,7 @@ class DYIcon extends DYElement {
 		})
 	}
 	get $icon(){
-		return this.root.find('.icon')[0]
+		return this.root.find('.icon')
 	}
 }
 
