--- a/src/assets/components/dy-project.html
+++ b/src/assets/components/dy-project.html
@@ -390,7 +390,7 @@ class DYProject extends DYElement {
 			}
 		}*/
 
-		root.find('dy-terms')[0].initialize(data.terms)
+		root.find('dy-terms').initialize(data.terms)
 
 		this.on({
 			click(e){
