--- a/src/assets/components/dy-button.html
+++ b/src/assets/components/dy-button.html
@@ -59,7 +59,7 @@
 			text-shadow: rgba(0, 0, 0, 0.1) 0 1px 1px;
 		}
 
-		button.small {
+		:host([theme~=small]) button {
 			font-size: 0.75em;
 		}
 
