Use [theme~=heavy] instead of [heavy]

--- a/src/assets/components/dy-button.html
+++ b/src/assets/components/dy-button.html
@@ -63,7 +63,7 @@
 			font-size: 0.75em;
 		}
 
-		:host([heavy]) button {
+		:host([theme~=heavy]) button {
 			font-weight: bold;
 			line-height: 1;
 			padding: 1ch 1em;
